--- a/JS_Foundation/Part_8/DOM.html
+++ b/JS_Foundation/Part_8/DOM.html
@@ -1,83 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        body{
-            background-color: rgb(51, 50, 50);
-            color: #fff;
-            text-align: center;
-        }
-    
-        .highlights{
-            background-color: yellow;
-            font-weight: bold;
-            color: black;
-        }
-        .hidden{
-            display: none;
-        }
-    </style>
-</head>
+      body {
+        background-color: rgb(51, 50, 50);
+        color: #fff;
+        text-align: center;
+      }
 
-<body>
+      .highlights {
+        background-color: yellow;
+        font-weight: bold;
+        color: black;
+      }
+      .hidden {
+        display: none;
+      }
+    </style>
+  </head>
+
+  <body>
     <h1>JavaScript DOM Fun Examples</h1>
-    
+
     <!--Example 1 : Accessing DOM Elements-->
     <section id="example-1">
-        <h2 class="highlights">Accessing DOM elements</h2>
-        <p id="myParagraph">
-            This is a paragraph. Click the button to change me!
-        </p>
-        <button id="changeTextButton">Change Text</button>
+      <h2 class="highlights">Accessing DOM elements</h2>
+      <p id="myParagraph">
+        This is a paragraph. Click the button to change me!
+      </p>
+      <button id="changeTextButton">Change Text</button>
     </section>
 
     <!--Example 2: Traversing the DOM -->
     <section id="example-2">
-        <h2>
-            Traversing the DOM
-        </h2>
-        <ul id="citiesList">
-            <li class="city">New York</li>
-            <li>Paris</li>
-            <li>New Delhi</li>
-            <li>London</li>
-        </ul>
+      <h2>Traversing the DOM</h2>
+      <ul id="citiesList">
+        <li class="city">New York</li>
+        <li>Paris</li>
+        <li>New Delhi</li>
+        <li>London</li>
+      </ul>
 
-        <button id="highlightFirstCity">Highlight First City</button>
+      <button id="highlightFirstCity">Highlight First City</button>
     </section>
-
 
     <section id="example-3">
-        <h2>Manipulating DOM Elements</h2>
-        <div id="coffeeOrder">Order:
-            <span id="coffeeType">Lattee</span>
-        </div>
-        <button id="changeOrder">Change Order to Espresso</button>
+      <h2>Manipulating DOM Elements</h2>
+      <div id="coffeeOrder">
+        Order:
+        <span id="coffeeType">Lattee</span>
+      </div>
+      <button id="changeOrder">Change Order to Espresso</button>
     </section>
 
-
     <section id="example-4">
-        <h2>Creating and Inserting Elements</h2>
-        <button id="addNewItems">Add a New Item to the Shopping List</button>
-        <ul id="shoppingList">
-            <li>Bread</li>
-            <li>Maggie</li>
-        </ul>
+      <h2>Creating and Inserting Elements</h2>
+      <button id="addNewItems">Add a New Item to the Shopping List</button>
+      <ul id="shoppingList">
+        <li>Bread</li>
+        <li>Maggie</li>
+      </ul>
     </section>
 
     <section id="Example-5">
-        <h2>Removing DOM elements</h2>
-        <ul id="taskList">
-            <li>Task 1</li>
-            <li>Task 2</li>
-            <li>Task 3</li>
-        </ul>
-        <button id="removeLastTask">Remove Last Task</button>
+      <h2>Removing DOM elements</h2>
+      <ul id="taskList">
+        <li>Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li>
+      </ul>
+      <button id="removeLastTask">Remove Last Task</button>
+    </section>
+
+    <section id="Example-6">
+      <h2>Event Handling in the DOM</h2>
+      <button id="clickMeButton">Click Me!</button>
+    </section>
+
+    <section id="Example-7">
+      <h2>Event Delegation</h2>
+      <ul id="teaList">
+        <li class="teaItem">Green Tea</li>
+        <li class="teaItem">Black Tea</li>
+        <li class="teaItem">Oolong Tea</li>
+      </ul>
+      <p>Click on any tea to select it!</p>
+    </section>
+
+    <section id="Example-8">
+      <h2>Form Handling</h2>
+      <form id="feedbackForm">
+        <label for="feedbackInput">Your Feedback:</label>
+        <input type="text" id="feedbackInput" placeholder="Enter feedback" />
+        <button type="submit">Submit Feedback</button>
+      </form>
+      <p id="feedbackDisplay"></p>
+    </section>
+
+    <section id="Example-9">
+      <h2>DOM content Loaded</h2>
+      <p id="domStatus">Waiting for DOM to load...</p>
+    </section>
+
+    <section id="Example-10">
+      <h2>CSS Classes Manipulation</h2>
+      <p id="descriptionText">This text will change color!</p>
+      <button id="toggleHighlight">Toggle Highlight</button>
     </section>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
